魔法值UTF-8使用CharsetUtil.UTF-8代替